New Node System

--- a/pyrightconfig.json
+++ b/pyrightconfig.json
@@ -2,8 +2,9 @@
     "pythonVersion":"3.13",
     "pythonPath":"C:/Users/Dev/AppData/Local/Programs/Python/Python313/python.exe",
     "extraPaths":[
-        "./src",
-        "../Zed"
+        "~/Projects/Zed/",
+        "~/Projects/Zed/src/",
+        "~/Projects/Zed/src/Parser/"
     ]
 }
 
